# Coda

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  example.py  nonesharded_example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_logs.md
Coda/: __init__.py  setup.py  type_errors.py
Coda/_core/: components.py  components_base.py  constants.py  embed_base.py  entities.py  exceptions.py  handlers.py  http.py  interactions.py  models.py  payloads.py  poll_base.py  sharding.c  sharding.pyx  ws.py
Coda/core/: embed_base.py  handler_base.py  http.py  setup.py  ws.py
Coda/utils/: __init__.py  tools.c  tools.pyx
