[metadata]

name = Coda
version = 0.3.9
author = ore0Os
description = a light weight discord bot framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ore0Os/discordify
project_urls =
    Bug Tracker = https://github.com/ore0Os/discordify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

install_requires =
    aiohttp
    orjson
    cython
    colorama

python_requires = >=3.9

[build_ext]

inplace = 1

[options.package_data]

* = *.pyx, *.pxd, *.c

[options.packages.find]

where = dissonance