[metadata]

name = Coda
version = 2.0
author = ore0Os
description = a light weight discord bot framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Link1O/Coda
project_urls =
    Bug Tracker = https://github.com/Link1O/Coda/issues
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

install_requires =
    aiohttp
    cython
    orjson
    colorama

python_requires = >=3.12

[build_ext]

inplace = 1

[options.package_data]

* = *.pyx, *.pxd, *.c

[options.packages.find]

where = Coda