[metadata]

name = Coda
version = 2.1.0
license = MIT
author = Link1O
description = a straightforward and efficient framework for creating Discord clients 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Link1O/Coda
project_urls =
    Bug Tracker = https://github.com/Link1O/Coda/issues
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = find:
install_requires =
    aiohttp
    cython
    orjson
    colorama

python_requires = >=3.12

[build_ext]

inplace = 1

[options.package_data]

* = *.pyx, *.pxd, *.c, py.typed

[options.packages.find]

where = .